# shelbi

./: .csignore  .gitignore  .goreleaser.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
.contextstore/: settings.yml
.github/workflows/: app-ci.yml  release-apt.yml  release.yml  site-ci.yml
.shelbi/: project
Code Review/adversarial-2026-07/: cli-session-ux.md  state-persistence.md  state-runtime.md
Engineering/: architecture.md
Engineering/Code Review/adversarial-2026-07/: adversarial-review-core-domain-model-shelbi-core.md  adversarial-review-tui-shell-apppolleractivitysidebar.md  orchestrator-lifecycle.md  process-boundaries.md
Plans/: agents-workspaces.md  agents.md  auto-dispatch-orchestrator.md  codex-parity-with-claude.md  customizable-keybindings.md  default-install-experience-workflows-and-agents.md  generic-review-via-workflow-primitives.md  generic-review-via-workflow.md  getting-started-experience.md  in-repo-project-config.md  in-repo-vs-global-project-config.md  orchastrator-auto-dispatch.md  orchastrator.md  orchestrator-auto-dispatch.md  release-distribution-homebrew-apt.md  release-distribution.md  remote-worker-communication.md  remote-worker-orchestrator-communication.md  review-the-codex-weekend-changes-and-a-path-to-one-harness.md  review-workspaces.md  shared-statuses.md  shelbi-website.md  worker-orchestrator-communication.md  workflow-transition-hooks.md  workflows.md  zen-mode.md
Product/: positioning.md  principles.md  vision.md
Research/: conductor.md  cursor-background-agents.md  devin-cognition.md  devin.md  herd.md  openhands.md  sketch.md
crates/shelbi-agent/: Cargo.toml
crates/shelbi-agent/src/: lib.rs
crates/shelbi-cli/: Cargo.toml
crates/shelbi-cli/src/: main.rs  project_root.rs  wizard.rs
crates/shelbi-cli/src/commands/: action.rs  add_project.rs  agent.rs  archive.rs  attach.rs  config.rs  daemon.rs  diff.rs  events.rs  guard.rs  hub_version.rs  init.rs  list.rs  merge.rs  message.rs  mod.rs  open.rs  orchestrate.rs  orchestrator.rs  palette.rs  picker.rs  popup.rs  project.rs  quit.rs  quit_project.rs  quit_shelbi.rs  reload.rs  review.rs  review_confirm.rs  send.rs  spawn.rs  status.rs  tail.rs  task.rs  teardown.rs  wizard.rs  worker.rs  workflow.rs  workspace.rs  zen.rs  (+2 more)
crates/shelbi-cli/src/commands/daemon/: serve.rs  supervise.rs
crates/shelbi-cli/src/commands/init/: heuristic.rs
crates/shelbi-cli/src/commands/open/: pane.rs  server_pane.rs
crates/shelbi-cli/src/commands/workspace/: pane.rs
crates/shelbi-cli/tests/: init_noninteractive.rs  version_flag.rs
crates/shelbi-core/: Cargo.toml
crates/shelbi-core/src/: error.rs  integration.rs  lib.rs  model.rs  placeholders.rs  scaffold.rs  shell.rs  statuses.rs  system_memory.rs  worker_names.rs  workflow.rs  workspace_names.rs
crates/shelbi-orchestrator/: Cargo.toml
crates/shelbi-orchestrator/src/: actions.rs  branch.rs  codex_rpc.rs  contextstore.rs  default_orchestrator.md  default_orchestrator.md.template  dispatch.rs  git.rs  githook.rs  golden.rs  handoff.rs  lib.rs  lifecycle.rs  load.rs  ready.rs  review.rs  review_ui.rs  server_pane.rs  submit.rs  supervision.rs  transition.rs  wake.rs  wake_batch_tests.rs  wake_rejection_tests.rs  worker.rs  workspace.rs  zen.rs
crates/shelbi-orchestrator/tests/golden/claude/: hooks.manifest  orchestrator-argv.txt  settings.json  worker-argv-cold.txt  worker-argv-resume.txt
crates/shelbi-palette/: Cargo.toml
crates/shelbi-palette/src/: lib.rs
crates/shelbi-ssh/: Cargo.toml
crates/shelbi-ssh/src/: lib.rs
crates/shelbi-state/: Cargo.toml  build.rs
crates/shelbi-state/src/: agent_workspaces.rs  default_adversarial.md.template  default_developer.md.template  default_orchestrator.md.template  default_qa.md.template  default_review.md.template  default_security.md.template  default_worker_settings.json.template  default_workspace_settings.json.template  default_zenmode.md.template  event_log.rs  hub_config.rs  hub_version.rs  lib.rs  migrate.rs  project_paths.rs  resolve.rs  root.rs  ssh_control.rs  user_config.rs  worker_status.rs  workflows.rs  workspace_status.rs  zenmode.rs
crates/shelbi-state/src/keymap/: actions.rs  chord.rs  display.rs  loader.rs  mod.rs
crates/shelbi-state/src/skills/: load_run_detection.SKILL.md
crates/shelbi-tmux/: Cargo.toml
crates/shelbi-tmux/src/: lib.rs
crates/shelbi-tui/: Cargo.toml
crates/shelbi-tui/src/: activity.rs  app.rs  kanban.rs  keymap.rs  lib.rs  markdown.rs  palette.rs  poller.rs  review.rs  review_panel.rs  sidebar.rs  theme.rs  view.rs  zen_probe.rs
crates/shelbi-tui/src/handlers/: activity.rs  kanban.rs  mod.rs  review.rs  sidebar.rs
docs/: documentation-codebase-audit.md  release-apt.md  release.md
docs/release/: homebrew-tap.md
docs/reviews/adversarial-2026-07/: orchestrator-zen.md  tui-kanban.md  (+1 more)
examples/: daily.yaml  myapp.yaml
packaging/homebrew-shelbi/: README.md
reviews/.contextstore/: settings.yml
reviews/adversarial-2026-07/: adversarial-review-tui-kanban-view-shelbi-tui.md  cli-daemon-board.md  deferred-findings-disposition.md
scripts/: install.sh
scripts/release/: build-apt-repo.sh  check-version.sh  export-apt-public-key.sh  update-homebrew-formula.rb
site/: .gitignore  AGENTS.md  README.md  contentlayer.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
site/app/: globals.css  layout.tsx  opengraph-image.tsx
site/components/: BoardAnimation.tsx  Callout.tsx  CodeBlock.tsx  CodeTabs.tsx  CopyButton.tsx  CopyPromptBanner.tsx  CopyProvidedContext.tsx  DocFooter.tsx  DocsScrollReset.tsx  DocsSearch.tsx  DocsSidebar.tsx  FeatureGrid.tsx  Footer.tsx  Header.tsx  Hero.tsx  HeroAnimation.tsx  InstallCloser.tsx  InstallCommand.tsx  KanbanMockup.tsx  Menu.tsx  OgCard.tsx  OnThisPage.tsx  Pre.tsx  ProblemSection.tsx  SolutionIntro.tsx  Steps.tsx  TerminalBanner.tsx  ThemeToggle.tsx  ValueProps.tsx  Wordmark.tsx  mdx-components.tsx
site/lib/: code-tabs-store.ts  comparisons.ts  docs.ts  llms.ts  search.ts  shiki-mono-dark.ts  shiki-mono-light.ts  vs.ts
site/public/: install.sh
(+94 files in other folders)
