[package]
name = "shelbi-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Orchestrator pane bootstrap and system prompt for shelbi"

[dependencies]
shelbi-core = { workspace = true }
shelbi-state = { workspace = true }
shelbi-tmux = { workspace = true }
shelbi-ssh = { workspace = true }
shelbi-agent = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
globset = "0.4"

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"
