[package]
name = "shelbi-palette"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Fuzzy command palette (Ctrl+P) for shelbi's TUI"

[dependencies]
shelbi-core = { workspace = true }
nucleo-matcher = { workspace = true }
